--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -1,42 +1,81 @@
 <app-nav></app-nav>
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="../../../assets/img/Group 11.png" class="img1" alt="" srcset="">
+            <div class="carousel-caption d-none d-md-block">
+                <h5></h5>
 
-<div class="row">
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="../../../assets/img/photo-1552566626-52f8b828add9.webp" class="img1" alt="...">
+            <div class="carousel-caption d-none d-md-block" style="bottom: 100px; position: absolute;font-size: smaller;">
+                <h1>Mr Burgers</h1>
+                <hr style="color: white;size: 2px;">
 
-    <img src="../../../assets/img/Group 11.png" class="img1" alt="" srcset="">
+            </div>
+        </div>
+        <div class="carousel-item ">
+            <img src="../../../assets/img/photo-1587574293340-e0011c4e8ecf.webp " class=" img1 " alt="... ">
+            <div class="carousel-caption d-none d-md-block " style="bottom: 100px; position: absolute ">
+                <h1> La Francé</h1>
+                <hr style="color: white; size: 2px;">
+            </div>
+        </div>
+    </div>
+    <button class="carousel-control-prev " type="button " data-bs-target="#carouselExampleIndicators " data-bs-slide="prev ">
+      <span class="carousel-control-prev-icon " aria-hidden="true "></span>
+      <span class="visually-hidden ">Previous</span>
+    </button>
+    <button class="carousel-control-next " type="button " data-bs-target="#carouselExampleIndicators " data-bs-slide="next ">
+      <span class="carousel-control-next-icon " aria-hidden="true "></span>
+      <span class="visually-hidden ">Next</span>
+    </button>
+</div>
+
+<div class="row ">
+
+
 
 </div>
 
-<div class="row">
-    <div class="tarjeta text-center">
-        <div class="card-body">
-            <p class="card-text">Encuentra tu sitio ideal y olvídate de pasar malos ratos.</p>
-            <a routerLink="/vistageneral" class="btn btn-primary"> Ver más</a>
+<div class="row ">
+    <div class="tarjeta text-center ">
+        <div class="card-body ">
+            <p class="card-text ">Encuentra tu sitio ideal y olvídate de pasar malos ratos.</p>
+            <a routerLink="/vistageneral " class="btn btn-primary "> Ver más</a>
         </div>
     </div>
-    <div class="tarjeta text-center">
+    <div class="tarjeta text-center ">
 
         <div class="card-body ">
 
-            <p class="card-text">Visita lugares seguros y verificados con la ayuda de Best Places Montería</p>
-            <a routerLink="/vistageneral" class="btn btn-primary"> Ver más</a>
+            <p class="card-text ">Visita lugares seguros y verificados con la ayuda de Best Places Montería</p>
+            <a routerLink="/vistageneral " class="btn btn-primary "> Ver más</a>
         </div>
     </div>
-    <div class="tarjeta text-center">
-        <div class="card-body">
-            <p class="card-text">De la mano de Best Places posiciona tu emprendimiento</p>
-            <a routerLink="/vistageneral" class="btn btn-primary"> Ver más</a>
+    <div class="tarjeta text-center ">
+        <div class="card-body ">
+            <p class="card-text ">De la mano de Best Places posiciona tu emprendimiento</p>
+            <a routerLink="/vistageneral " class="btn btn-primary "> Ver más</a>
         </div>
     </div>
 </div>
 
-<div class="row cimg row3">
+<div class="row cimg row3 ">
     <div class="col ">
-        <img id="img2" src="../../../assets/img/imagen 3.png" alt="" srcset="">
+        <img id="img2 " src="../../../assets/img/imagen 3.png " alt=" " srcset=" ">
 
-        <h1 id="img2-title">BestPlaces</h1>
-        <p id="img2-text">Creando lazos para crecer juntos</p>
+        <h1 id="img2-title ">BestPlaces</h1>
+        <p id="img2-text ">Creando lazos para crecer juntos</p>
     </div>
-    <div class="col col-right">
+    <div class="col col-right ">
         <h3>¿Quienes somos?</h3>
         <p>Somos una plataforma dedicada a la publicidad de sitios de venta de comida, como restaurantes, pizzerias entre otros tipos de establecimientos, aqui podas encontrar el sitio que sea de tu agrado, tambien referencias de otros usuarios acerca del
             establecimientos y veras la calificacion del servicio prestado por estos.
@@ -44,13 +83,13 @@
     </div>
 </div>
 
-<div class="row row4">
-    <div class="col col-right2">
+<div class="row row4 ">
+    <div class="col col-right2 ">
         <h3>Nuestros servicios</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet exercitationem ipsam quos in neque. Officiis ipsa, est nesciunt, vel culpa voluptas optio expedita nam autem voluptatem obcaecati commodi aperiam harum adipisci veritatis molestiae
             repudiandae sint consequuntur. Alias inventore optio ullam.</p>
     </div>
-    <div class="col">
-        <img id="img3" src="../../../assets/img/imagen 4.png" alt="" srcset="">
+    <div class="col ">
+        <img id="img3 " src="../../../assets/img/imagen 4.png " alt=" " srcset=" ">
     </div>
 </div>
