--- a/src/app/components/body/body.component.css
+++ b/src/app/components/body/body.component.css
@@ -8,6 +8,16 @@
     margin-bottom: 5%;
 }
 
+.carousel-item h1 {
+    font-size: 50px;
+    font-weight: bold;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.carousel-item img {
+    background: rgba(21, 20, 20, 0.31);
+}
+
 .title-img {
     position: absolute;
     left: 10.9%;
